--- a/tasks/libs/pipeline/github_slack_map.yaml
+++ b/tasks/libs/pipeline/github_slack_map.yaml
@@ -18,7 +18,8 @@
 '@datadog/agent-metrics': '#agent-metrics'
 '@datadog/agent-logs': '#agent-logs'
 '@datadog/agent-processing-and-routing': '#agent-processing-and-routing'
-'@datadog/agent-shared-components': '#agent-shared-components-ops'
+'@datadog/agent-runtimes': '#agent-runtimes-ops'
+'@datadog/agent-configuration': '#agent-configuration-ops'
 '@datadog/container-app': '#container-app'
 '@datadog/metrics-aggregation': '#metrics-aggregation'
 '@datadog/serverless': '#serverless-agent'
