--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -60,7 +60,7 @@ jobs:
           TMP_PR_BODY_PATH: /tmp/pr_body
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
           PR_TITLE: "[automated] Update golang.org/x/... dependencies"
-          PR_LABELS: "team/agent-shared-components,qa/done,changelog/no-changelog"
+          PR_LABELS: "team/agent-runtimes,qa/done,changelog/no-changelog"
           GITHUB_REF: ${{ github.ref }}
         run: |
           # Generate the PR description
