--- a/tasks/libs/pipeline/github_slack_review_map.yaml
+++ b/tasks/libs/pipeline/github_slack_review_map.yaml
@@ -19,7 +19,8 @@
 '@datadog/agent-metrics': '#agent-metrics'
 '@datadog/agent-logs': '#agent-logs'
 '@datadog/agent-processing-and-routing': '#agent-processing-and-routing'
-'@datadog/agent-shared-components': '#agent-shared-components'
+'@datadog/agent-runtimes': '#agent-runtimes'
+'@datadog/agent-configuration': '#agent-configuration'
 '@datadog/container-app': '#container-app'
 '@datadog/metrics-aggregation': '#metrics-aggregation'
 '@datadog/serverless': '#serverless-agent'
