update a few files

--- a/otel-smp/oss/Dockerfile
+++ b/otel-smp/oss/Dockerfile
@@ -1,10 +1,13 @@
 # from https://github.com/open-telemetry/opentelemetry-collector-releases/blob/main/distributions/otelcol-contrib/Dockerfile
-FROM otel/opentelemetry-collector-contrib:0.116.0 AS prep
+FROM otel/opentelemetry-collector-contrib:0.118.0 AS prep
 FROM ubuntu:latest
 
 COPY --from=prep /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=prep otelcol-contrib /otelcol-contrib
 COPY --from=prep /etc/otelcol-contrib /etc/otelcol-contrib
+
+COPY otelcorecol /otelcol-contrib
+COPY  otel-config.yaml /etc/datadog-agent/otel-config.yaml
 
 RUN apt-get update && apt-get install -y curl lsof iftop nethogs  net-tools
 EXPOSE 4317 4318 55680 55679
