--- a/test/regression/cases/otel_to_otel_logs-collector/datadog-agent/otel-config.yaml
+++ b/test/regression/cases/otel_to_otel_logs-collector/datadog-agent/otel-config.yaml
@@ -17,6 +17,8 @@ exporters:
     metrics:
       resource_attributes_as_tags: true
       endpoint: http://127.0.0.1:9091
+    logs:
+      endpoint: http://127.0.0.1:9091
       
 
 processors:
