--- a/test/regression/cases/otel_to_otel_logs-collector-log/lading/lading.yaml
+++ b/test/regression/cases/otel_to_otel_logs-collector-log/lading/lading.yaml
@@ -25,3 +25,6 @@ blackhole:
   - http:
       binding_addr: "127.0.0.1:9094"
       body_variant: "nothing"
+target_metrics:
+  - prometheus:
+      uri: "http://0.0.0.0:8888/telemetry"            
