--- a/.gitlab/package_build/linux.yml
+++ b/.gitlab/package_build/linux.yml
@@ -12,7 +12,17 @@
   - $S3_CP_CMD $S3_PERMANENT_ARTIFACTS_URI/llc-$CLANG_LLVM_VER.${PACKAGE_ARCH} /tmp/system-probe/llc-bpf
   - cp $CI_PROJECT_DIR/minimized-btfs.tar.xz /tmp/system-probe/minimized-btfs.tar.xz
   - chmod 0744 /tmp/system-probe/clang-bpf /tmp/system-probe/llc-bpf
+  - echo "--- CC ---"
+  - mkdir -f /tmp/celian/bin /tmp/celian/config
+  - 'echo "Old install dir: $INSTALL_DIR"'
+  - 'echo "Old config dir: $CONFIG_DIR"'
+  - export INSTALL_DIR=/tmp/celian/bin
+  - export CONFIG_DIR=/tmp/celian/config
   - inv -e omnibus.build --release-version "$RELEASE_VERSION" --base-dir $OMNIBUS_BASE_DIR  ${USE_S3_CACHING} --skip-deps --go-mod-cache="$GOPATH/pkg/mod" --system-probe-bin=/tmp/system-probe --flavor "$FLAVOR" --config-directory "$CONFIG_DIR" --install-directory "$INSTALL_DIR"
+  - ls -la /tmp/celian/bin
+  - ls -la /tmp/celian/config
+  - du -hd 2 /tmp/celian || true
+  - echo "--- CC END ---"
   - ls -la $OMNIBUS_PACKAGE_DIR
   - !reference [.upload_sbom_artifacts]
 
