--- a/.gitlab/binary_build/cluster_agent.yml
+++ b/.gitlab/binary_build/cluster_agent.yml
@@ -36,3 +36,13 @@ cluster_agent-build_arm64:
   tags: ["arch:arm64"]
   variables:
     ARCH: arm64
+
+cluster_agent_fips-build_amd64:
+  extends: cluster_agent-build_amd64
+  variables:
+    GOEXPERIMENT: boringcrypto
+
+cluster_agent_fips-build_arm64:
+  extends: cluster_agent-build_arm64
+  variables:
+    GOEXPERIMENT: boringcrypto
