build DCA FIPS docker images

--- a/.gitlab/container_build/docker_linux.yml
+++ b/.gitlab/container_build/docker_linux.yml
@@ -260,6 +260,40 @@ docker_build_cluster_agent_arm64:
     - mv -vf $CWS_INSTRUMENTATION_BINARIES_DIR $BUILD_CONTEXT/
     - mv -vf Dockerfiles/agent/nosys-seccomp Dockerfiles/cluster-agent/
 
+docker_build_cluster_agent_fips_amd64:
+  extends: [.docker_build_job_definition_amd64, .docker_build_s3]
+  rules: !reference [.on_tag_or_a7]
+  needs:
+    - job: cluster_agent_fips-build_amd64
+      artifacts: false
+    - job: cws_instrumentation-build_amd64
+      artifacts: false
+    - job: cws_instrumentation-build_arm64
+      artifacts: false
+  variables:
+    IMAGE: registry.ddbuild.io/ci/datadog-agent/cluster-agent-fips
+    BUILD_CONTEXT: Dockerfiles/cluster-agent
+  before_script:
+    - !reference [.docker_build_s3, before_script]
+    - cp -Rvf Dockerfiles/agent/nosys-seccomp Dockerfiles/cluster-agent/
+
+docker_build_cluster_agent_fips_arm64:
+  extends: [.docker_build_job_definition_arm64, .docker_build_s3]
+  rules: !reference [.on_tag_or_a7]
+  needs:
+    - job: cluster_agent_fips-build_arm64
+      artifacts: false
+    - job: cws_instrumentation-build_amd64
+      artifacts: false
+    - job: cws_instrumentation-build_arm64
+      artifacts: false
+  variables:
+    IMAGE: registry.ddbuild.io/ci/datadog-agent/cluster-agent-fips
+    BUILD_CONTEXT: Dockerfiles/cluster-agent
+  before_script:
+    - !reference [.docker_build_s3, before_script]
+    - cp -Rvf Dockerfiles/agent/nosys-seccomp Dockerfiles/cluster-agent/
+
 # build the cws-instrumentation image
 docker_build_cws_instrumentation_amd64:
   extends: [.docker_build_job_definition_amd64]
