--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -68,9 +68,10 @@ new-agent_dmg-x64-a7:
     - 'echo OMNIBUS_BASE_DIR: $OMNIBUS_BASE_DIR'
     - 'echo USE_S3_CACHING: $USE_S3_CACHING'
     - 'echo GOPATH: $GOPATH'
-    - FLAVOR=datadog-agent
-    - 'echo FLAVOR: $FLAVOR'
-    - inv -e omnibus.build --release-version "$RELEASE_VERSION" --base-dir $OMNIBUS_BASE_DIR  ${USE_S3_CACHING} --skip-deps --go-mod-cache="$GOPATH/pkg/mod" --flavor "$FLAVOR" --config-directory "$CONFIG_DIR" --install-directory "$INSTALL_DIR"
+    # TODO
+    # - FLAVOR=datadog-agent
+    # - 'echo FLAVOR: $FLAVOR'
+    - inv -e omnibus.build --release-version "$RELEASE_VERSION" --base-dir $OMNIBUS_BASE_DIR  ${USE_S3_CACHING} --skip-deps --go-mod-cache="$GOPATH/pkg/mod" --config-directory "$CONFIG_DIR" --install-directory "$INSTALL_DIR"
     - echo Done
     - ls -la /tmp/celian/bin
     - ls -la /tmp/celian/config
