--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -63,11 +63,15 @@ new-agent_dmg-x64-a7:
     # TODO
     - !reference [.vault_login]
     - export RELEASE_VERSION=$RELEASE_VERSION_7
+    - 'echo AGENT_MAJOR_VERSION: $AGENT_MAJOR_VERSION'
+    - export AGENT_MAJOR_VERSION=7
     #
     - mkdir -p /tmp/celian/bin /tmp/celian/config
     - export INSTALL_DIR=/tmp/celian/bin
     - export CONFIG_DIR=/tmp/celian/config
-    # - inv -e omnibus.build --release-version "$RELEASE_VERSION" --base-dir $OMNIBUS_BASE_DIR  ${USE_S3_CACHING} --skip-deps --go-mod-cache="$GOPATH/pkg/mod" --system-probe-bin=/tmp/system-probe --flavor "$FLAVOR" --config-directory "$CONFIG_DIR" --install-directory "$INSTALL_DIR"
+    # LINUX: - inv -e omnibus.build --release-version "$RELEASE_VERSION" --base-dir $OMNIBUS_BASE_DIR  ${USE_S3_CACHING} --skip-deps --go-mod-cache="$GOPATH/pkg/mod" --system-probe-bin=/tmp/system-probe --flavor "$FLAVOR" --config-directory "$CONFIG_DIR" --install-directory "$INSTALL_DIR"
+    # MACOS SIGN: inv -e $INVOKE_TASK --hardened-runtime --major-version "$AGENT_MAJOR_VERSION" --release-version "$RELEASE_VERSION" --config-directory "$CONFIG_DIR" --install-directory "$INSTALL_DIR" || exit 1
+    # MACOS NO SIGN: inv -e $INVOKE_TASK --skip-sign --major-version "$AGENT_MAJOR_VERSION" --release-version "$RELEASE_VERSION" --config-directory "$CONFIG_DIR" --install-directory "$INSTALL_DIR" || exit 1
     - 'echo RELEASE_VERSION: $RELEASE_VERSION'
     - 'echo OMNIBUS_BASE_DIR: $OMNIBUS_BASE_DIR'
     - 'echo USE_S3_CACHING: $USE_S3_CACHING'
@@ -75,7 +79,8 @@ new-agent_dmg-x64-a7:
     # TODO
     # - FLAVOR=datadog-agent
     # - 'echo FLAVOR: $FLAVOR'
-    - inv -e omnibus.build --release-version "$RELEASE_VERSION" --base-dir $OMNIBUS_BASE_DIR ${USE_S3_CACHING} --skip-deps --go-mod-cache="$GOPATH/pkg/mod" --config-directory "$CONFIG_DIR" --install-directory "$INSTALL_DIR"
+    # - inv -e omnibus.build --release-version "$RELEASE_VERSION" --base-dir $OMNIBUS_BASE_DIR ${USE_S3_CACHING} --skip-deps --go-mod-cache="$GOPATH/pkg/mod" --config-directory "$CONFIG_DIR" --install-directory "$INSTALL_DIR"
+    - inv -e omnibus.build --skip-sign --major-version "$AGENT_MAJOR_VERSION" --release-version "$RELEASE_VERSION" --config-directory "$CONFIG_DIR" --install-directory "$INSTALL_DIR"
     - echo Done
     - ls -la /tmp/celian/bin
     - ls -la /tmp/celian/config
