[build-macos-gitlabci] please build 15:35

--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -172,6 +172,8 @@ new-agent_dmg-x64-a7:
       echo 'export PATH="$GOPATH/bin:$PATH"' >> ~/.build_setup
     - . ~/.build_setup
     - export AGENT_DIR="$GOPATH/src/github.com/DataDog/datadog-agent"
+    # Clone agent
+    - rm -rf "$AGENT_DIR" && mkdir -p "$AGENT_DIR"
     # TODO: Proper way
     - cp -r ./* "$AGENT_DIR"
     # TODO: xcode 14.2?
