--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -199,15 +199,16 @@ new-agent_dmg-x64-a7:
     #     sudo rm -rf /Library/Frameworks/Python.framework/Versions/*
     # TODO: Cache brew deps
     # TODO: Cache _omnibus_cache_key
-    - bash .gitlab/package_build/builder_setup.sh
+    # TODO: Verify runner - bash .gitlab/package_build/builder_setup.sh
     # TODO: Add certificates to the keychain
     # TODO: Cache ruby deps
-    - |
-      export GOMODCACHE=~/gomodcache
-      if [ "${USE_CACHING_PROXY_RUBY}" = "true" ]; then export BUNDLE_MIRROR__RUBYGEMS__ORG=https://${ARTIFACTORY_USERNAME}:${ARTIFACTORY_TOKEN}@${ARTIFACTORY_URL}/${ARTIFACTORY_GEMS_PATH}; fi
-      if [ "${USE_CACHING_PROXY_PYTHON}" = "true" ]; then export PIP_INDEX_URL=https://${ARTIFACTORY_USERNAME}:${ARTIFACTORY_TOKEN}@${ARTIFACTORY_URL}/${ARTIFACTORY_PYPI_PATH}; fi
-      mkdir -p $GOMODCACHE
-      bash ./scripts/build_script.sh
+    # TODO: Cache...
+    # - |
+    #   export GOMODCACHE=~/gomodcache
+    #   if [ "${USE_CACHING_PROXY_RUBY}" = "true" ]; then export BUNDLE_MIRROR__RUBYGEMS__ORG=https://${ARTIFACTORY_USERNAME}:${ARTIFACTORY_TOKEN}@${ARTIFACTORY_URL}/${ARTIFACTORY_GEMS_PATH}; fi
+    #   if [ "${USE_CACHING_PROXY_PYTHON}" = "true" ]; then export PIP_INDEX_URL=https://${ARTIFACTORY_USERNAME}:${ARTIFACTORY_TOKEN}@${ARTIFACTORY_URL}/${ARTIFACTORY_PYPI_PATH}; fi
+    #   mkdir -p $GOMODCACHE
+    - bash ./scripts/build_script.sh
     # TODO: Other things...
 
 
