[build-macos-gitlabci] please build 17:26

--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -139,7 +139,7 @@ agent_dmg-x64-a7:
 
 new-agent_dmg-x64-a7:
   stage: package_build
-  extends: .macos-gitlab
+  extends: .macos_gitlab
   tags: ["macos:ventura-arm64-test", "specific:true"]
   needs: []
   timeout: 6h
