update filter test to include full lib version
This commit updates the filter test to include the full lib version,
which is more cumbersome but it's a stronger test.

--- a/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/filter.yaml
+++ b/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/filter.yaml
@@ -14,17 +14,17 @@ apm_config:
           matchNames:
           - "billing-service"
         ddTraceVersions:
-          python: "default"
+          python: "v2"
       - name: "Microservices"
         selector:
           matchLabels:
             language: "java"
         ddTraceVersions:
-          java: "default"
+          java: "v1"
       - name: "Unknown Language"
         selector:
           matchLabels:
             language: "unknown"
       - name: "Default"
         ddTraceVersions:
-          js: "default"
+          js: "v5"
