--- a/.gitlab/deploy_dca/deploy_dca.yml
+++ b/.gitlab/deploy_dca/deploy_dca.yml
@@ -52,3 +52,34 @@ deploy_containers-dca_internal-latest:
   rules: !reference [.on_deploy_internal_manual_final]
   variables:
     VERSION: latest
+
+.deploy_containers-dca-fips-base:
+  extends: .docker_publish_job_definition
+  stage: deploy_dca
+  needs:
+    - job: "docker_build_cluster_agent_fips_amd64"
+      artifacts: false
+    - job: "docker_build_cluster_agent_fips_arm64"
+      artifacts: false
+  before_script:
+    - if [[ "$VERSION" == "" ]]; then VERSION="$(inv agent.version --url-safe)" || exit $?; fi
+    - if [[ "$CLUSTER_AGENT_REPOSITORY" == "" ]]; then export CLUSTER_AGENT_REPOSITORY="cluster-agent"; fi
+    - export IMG_BASE_SRC="${SRC_DCA_FIPS}:v${CI_PIPELINE_ID}-${CI_COMMIT_SHORT_SHA}"
+    - export IMG_SOURCES="${IMG_BASE_SRC}-amd64,${IMG_BASE_SRC}-arm64"
+    - export IMG_DESTINATIONS="${CLUSTER_AGENT_REPOSITORY}:${VERSION}-fips"
+
+deploy_containers-dca-fips_internal:
+  extends: .deploy_containers-dca-fips-base
+  rules: !reference [.on_deploy_internal_manual_final]
+
+deploy_containers-dca-fips_internal-rc:
+  extends: .deploy_containers-dca-fips-base
+  rules: !reference [.on_deploy_internal_rc]
+  variables:
+    VERSION: rc
+
+deploy_containers-dca-fips_internal-latest:
+  extends: .deploy_containers-dca-fips-base
+  rules: !reference [.on_deploy_internal_manual_final]
+  variables:
+    VERSION: latest
