--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -151,8 +151,9 @@ new-agent_dmg-x64-a7:
   # before_script:
   #   - export RELEASE_VERSION=$RELEASE_VERSION_7
   script:
+    - !reference [.vault_login]
     # Setup
-    - KEY=$($CI_PROJECT_DIR/tools/ci/fetch_secret.sh codecov) || exit $?; export KEY
+    - KEY=$($CI_PROJECT_DIR/tools/ci/fetch_secret.sh agent-api-key-org-2) || exit $?; export KEY
     - if [ -n "$KEY" ]; then echo OK; fi
     - exit
     - |
