Updated CODEOWNERS with new agent-discovery team (#33547)

--- a/tasks/libs/pipeline/github_slack_map.yaml
+++ b/tasks/libs/pipeline/github_slack_map.yaml
@@ -48,3 +48,4 @@
 '@datadog/apm-ecosystems-performance': '#apm-benchmarking-platform'
 '@DataDog/container-ecosystems': '#container-ecosystems-ops'
 '@datadog/injection-platform': '#injection-platform'
+'@datadog/agent-discovery': '#agent-discovery'
