--- a/tasks/libs/pipeline/github_slack_review_map.yaml
+++ b/tasks/libs/pipeline/github_slack_review_map.yaml
@@ -48,3 +48,4 @@
 '@datadog/apm-onboarding': '#apm-onboarding'
 '@datadog/apm-ecosystems-performance': '#apm-benchmarking-platform'
 '@datadog/injection-platform': '#injection-platform'
+'@datadog/agent-discovery': '#agent-discovery'
