Move fips pipeline generation to its dedicated invoke collection

--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -752,7 +752,7 @@ generate-fips-e2e-pipeline:
   #   - tests_windows_sysprobe_x64
   tags: ["arch:amd64"]
   script:
-    - inv -e pipeline.generate-fips-e2e-pipeline
+    - inv -e fips.generate-fips-e2e-pipeline
   artifacts:
     paths:
       - $CI_PROJECT_DIR/fips-e2e-gitlab-ci.yml
