--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -152,9 +152,6 @@ new-agent_dmg-x64-a7:
   #   - export RELEASE_VERSION=$RELEASE_VERSION_7
   script:
     - !reference [.vault_login]
-    - KEY="$(vault kv get -field=token kv/aws/arn:aws:iam::486234852809:role/ci-datadog-agent/agent-api-key-org-2)"
-    - if [ -n "$KEY" ]; then echo "OK!"; fi
-    - exit
     # Setup
     - |
       export INTEGRATION_WHEELS_CACHE_BUCKET=dd-agent-omnibus
@@ -167,9 +164,12 @@ new-agent_dmg-x64-a7:
       export INSTALL_DIR=/tmp/celian/bin
       export CONFIG_DIR=/tmp/celian/config
       export GOPATH="$GOROOT"
+      export OMNIBUS_DIR=omnibus
     - rm -f ~/.build_setup; touch ~/.build_setup
     - rm -rf "$INSTALL_DIR" "$CONFIG_DIR"
     - mkdir -p "$INSTALL_DIR" "$CONFIG_DIR"
+    # Temporary omnibus dir
+    - rm -rf "$OMNIBUS_DIR" && mkdir -p "$OMNIBUS_DIR"
     # Clone agent
     - |
       mkdir -p $HOME/go
@@ -232,11 +232,12 @@ new-agent_dmg-x64-a7:
     # - inv -e github.trigger-macos --workflow-type "build" --datadog-agent-ref "$CI_COMMIT_SHA" --release-version "$RELEASE_VERSION" --destination "$OMNIBUS_PACKAGE_DIR" --version-cache "$VERSION_CACHE_CONTENT" --integrations-core-ref "$INTEGRATIONS_CORE_VERSION"
     # - !reference [.upload_sbom_artifacts]
 
-    - echo "About to build for $RELEASE_VERSION"
-    # remove artifacts from previous pipelines that may come from the cache
-    - rm -rf $OMNIBUS_PACKAGE_DIR/*
-    - mkdir -p $OMNIBUS_PACKAGE_DIR
-    - !reference [.setup_macos_github_app]
-    - $S3_CP_CMD $S3_ARTIFACTS_URI/agent-version.cache .
-    - export VERSION_CACHE_CONTENT=$(cat agent-version.cache | base64 -)
-    - python3 -m pip install -r tasks/libs/requirements-github.txt
+    # TODO
+    # - echo "About to build for $RELEASE_VERSION"
+    # # remove artifacts from previous pipelines that may come from the cache
+    # - rm -rf $OMNIBUS_PACKAGE_DIR/*
+    # - mkdir -p $OMNIBUS_PACKAGE_DIR
+    # - !reference [.setup_macos_github_app]
+    # - $S3_CP_CMD $S3_ARTIFACTS_URI/agent-version.cache .
+    # - export VERSION_CACHE_CONTENT=$(cat agent-version.cache | base64 -)
+    # - python3 -m pip install -r tasks/libs/requirements-github.txt
