--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -169,7 +169,7 @@ new-agent_dmg-x64-a7:
     - rm -rf "$INSTALL_DIR" "$CONFIG_DIR"
     - mkdir -p "$INSTALL_DIR" "$CONFIG_DIR"
     # Temporary omnibus dir
-    - rm -rf "$OMNIBUS_DIR" && mkdir -p "$OMNIBUS_DIR"
+    - rm -rf "$OMNIBUS_DIR" && cp -r /omnibus "$OMNIUBS_DIR" && ls "$OMNIBUS_DIR"
     # Clone agent
     - |
       mkdir -p $HOME/go
